fix: apply vertical spacing to subsections

--- a/src/scss/pages/_generic.scss
+++ b/src/scss/pages/_generic.scss
@@ -107,12 +107,12 @@ main > article {
 
 .section--full[data-subsection-level="3"] .subsection + .subsection,
 .section--two-thirds[data-subsection-level="3"] .subsection + .subsection {
-  margin-top: rem(24);
+  margin-top: rem(50);
 }
 
 .section--full[data-subsection-level="4"] .subsection + .subsection,
 .section--two-thirds[data-subsection-level="4"] .subsection + .subsection {
-  margin-top: rem(40);
+  margin-top: rem(20);
 }
 
 .section--full-bleed {
@@ -244,6 +244,11 @@ main > article {
   .section--image .section__content + figure.swap {
     margin-top: 0;
     order: 2;
+  }
+
+  .section--full[data-subsection-level="3"] .subsection + .subsection,
+  .section--two-thirds[data-subsection-level="3"] .subsection + .subsection {
+    margin-top: rem(40);
   }
 }
 
